# live-bootcamp-project

./: README.md  compose.yml  nginx.conf
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  errors.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: hello.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  user.rs  verify_2fa.rs  verify_token.rs
